--- a/src/components/description-block/description-block.module.scss
+++ b/src/components/description-block/description-block.module.scss
@@ -8,7 +8,9 @@ $borderStyle: 1px solid grey !important;
   
   .text_wrap {
     width: 90%;
-    margin: 2rem;
+    margin-top: 2rem;
+    padding: 5px;
+    text-align: center;
   }
 
   .card_body {
