--- a/src/components/error/error.module.scss
+++ b/src/components/error/error.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   text-align: center;
-  padding-top: 50vh;
-  font-size: 2rem;
+  margin: auto;
+  font-size: 0.85rem;
   color: #ffffff;
 }
