--- a/src/components/question-block/question-block.module.scss
+++ b/src/components/question-block/question-block.module.scss
@@ -3,6 +3,19 @@
   margin-top: 1.5rem;
   flex-wrap: wrap;
 
+  justify-content: left;
+  text-align: left;
+
+  @media (max-width: 526px) {
+    justify-content: center;
+    text-align: center;
+    display: block;
+    
+    img {
+      margin: 0 !important;
+    }
+  }
+
   &__body {
     margin: 15px;
   }
